Sync all content

--- a/content/resources/4-144s06.md
+++ b/content/resources/4-144s06.md
@@ -5,10 +5,11 @@ description: The extent of flooding in New Orleans after Hurricane Katrina is sh
 file: /courses/4-144-architectural-design-level-ii-new-orleans-studio-spring-2006/77c05fe57fe093706e346ebdf4b5f477_4-144s06.jpg
 file_size: 68092
 file_type: image/jpeg
+hide_download: true
+hide_download_original: null
 image_metadata:
   caption: The extent of flooding in New Orleans after Hurricane Katrina is shown
-    in this satellite image. (Image courtesy of {{% resource_link "a0a65c45-8c6a-4e05-b8b6-fd32e1ca8d1a"
-    "NASA" %}}.)
+    in this satellite image. (Image courtesy of [NASA](http://www.nasa.gov/).)
   credit: ''
   image-alt: Satellite imagery showing flooding in New Orleans.
 learning_resource_types: []
