--- a/content/resources/4-144s06-th.md
+++ b/content/resources/4-144s06-th.md
@@ -4,10 +4,11 @@ description: New image Upload
 file: /courses/4-144-architectural-design-level-ii-new-orleans-studio-spring-2006/d39efca3d617868d65de8cf926cea117_4-144s06-th.jpg
 file_size: 7065
 file_type: image/jpeg
+hide_download: true
+hide_download_original: null
 image_metadata:
   caption: The extent of flooding in New Orleans after Hurricane Katrina is shown
-    in this satellite image. (Image courtesy of {{% resource_link "a0a65c45-8c6a-4e05-b8b6-fd32e1ca8d1a"
-    "NASA" %}}.)
+    in this satellite image. (Image courtesy of [NASA](http://www.nasa.gov/).)
   credit: ''
   image-alt: Satellite imagery showing flooding in New Orleans.
 learning_resource_types: []
